--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="largebox" aria-labelledby="largebox">
         <!--Left block for resume and bio-->
         <div class="box_resume" aria-labelledby="box_resume" tabindex="0">
-          <div class="left-item"><img class="pic" alt="Profile" src="/data/profile.jpg" >
+          <div class="left-item"><img class="pic" alt="Profile" src="data/profile.jpg" >
           <b>Eraj Uzoqov</b></div>
           <div class="left-item"><p class="bio">Hi! My name is Eraj Uzoqov. I am a junior Computer Science student at Northwestern University.
             I am from Dushanbe, Tajikistan. During my free time, I like to ride a bicycle, read books and play football.
