--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
     <div class="largebox">
         <!--Left block for resume and bio-->
         <div class="box_resume" aria-label="box_resume">
-          <div class="left-item"><img class="pic" alt="Profile" src="/data/profile.jpg"><b>Eraj Uzoqov</b></div>
+          <div class="left-item"><img class="pic" alt="Profile" src="data/profile.jpg"><b>Eraj Uzoqov</b></div>
           <div class="left-item"><p class="bio">Hi! My name is Eraj Uzoqov. I am a junior Computer Science student at Northwestern University.
             I am from Dushanbe, Tajikistan and I speak 5 languages.</p></div>
 
